[package]
name = "rtw-tui"
version = "0.1.1"
edition = "2021"
authors = ["jamdotjar"]
description = "A TUI using my raytracing library rtwlib"
license = "GPL-3.0"
repository = "https://github.com/yourusername/rtweekend-tui"
readme = "README.md"
keywords = ["raytracing", "tui"]
categories = ["command-line-utilities", "rendering"]

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rtwlib = "0.1.0"
serde_json = "1.0.134"
